# OOP

./: README.md
OOP1/: README.md
OOP1/task1/: CMakeLists.txt  README.md  func.cpp  func.h  main.cpp  test_division.cpp
OOP2/: CMakeLists.txt  README.md  main.cpp
